# nvim-mux

./: README.md  pyproject.toml  shell-hook.sh
command-server/: load-hook.sh  nvim-executor  nvim-executor-lib.zsh  server.conf  start-nvim-mux  term-nvim-mux
lua/: mux.lua
lua/mux/: api.lua  coproc.lua  defaults.lua  dispatch.lua  ipc.lua  types.lua
lua/mux/api/: internal.lua
lua/mux/api/internal/: notify.lua  reg.lua  types.lua  vars.lua
nvim_mux/: data.py  errors.py  extension_api.py  extension_rpc_processor.py  internal_api.py  nvim_api.py  nvim_client.py  nvim_model.py  nvim_mux_server.py  nvim_thread.py
nvim_mux/ext/: api.py  impl.py  rpc_processor.py
nvim_mux/mux/: impl.py  mux_client.py
nvim_mux/reg/: impl.py  reg_client.py
